@@ -1,5 +1,9 @@
 2007-11-15  Thomas Heller  <theller@python.net>
 
+	* comtypes\__init__.py: Fix bound_named_property.__setitem__ so
+	that COM properties can be set that require zero or more than one
+	arguments.
+
 	* comtypes\__init__.py:  Restructure the code that extend the COM
 	interface subclasses with __len__, __call__, __getitem__, and
 	__iter__ methods.  This is done with the comtypes.partial module,
